# android-p7zip

./: 7-zip.license  README.md  settings.gradle  sevenzipjbinding.LGPL
app/: build.gradle
app/src/androidTest/java/com/nmmedit/p7zip/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/nmmedit/p7zip/: MainActivity.java
app/src/test/java/com/nmmedit/p7zip/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
p7zip-android/: .gitignore  build.gradle  proguard-rules.pro
p7zip-android/src/androidTest/java/net/sf/sevenzipjbinding/: SevenZipTest.java
p7zip-android/src/main/: AndroidManifest.xml
p7zip-android/src/main/cpp/: CMakeLists.txt  RegisterNative.cxx
p7zip-android/src/main/cpp/jbinding-cpp/: CodecTools.cpp  CodecTools.h  Debug.h  JBindingTools.cpp  JBindingTools.h  JNITools.cpp  JNITools.h  JavaStaticInfo.cpp  JavaStaticInfo.h  SevenZipJBinding.cpp  SevenZipJBinding.h  UnicodeHelper.h  UniversalArchiveOpenCallback.cpp  UserTrace.cpp
p7zip-android/src/main/cpp/jbinding-cpp/CPPToJava/: CPPToJavaAbstract.h  CPPToJavaArchiveExtractCallback.cpp  CPPToJavaArchiveExtractCallback.h  CPPToJavaArchiveOpenCallback.cpp  CPPToJavaArchiveOpenVolumeCallback.cpp  CPPToJavaArchiveUpdateCallback.cpp  CPPToJavaArchiveUpdateCallback.h  CPPToJavaCryptoGetTextPassword.cpp  CPPToJavaCryptoGetTextPassword.h  CPPToJavaInStream.h  CPPToJavaOutStream.cpp  CPPToJavaOutStream.h  CPPToJavaProgress.cpp  CPPToJavaSequentialInStream.cpp  CPPToJavaSequentialOutStream.cpp  CPPToJavaSequentialOutStream.h
p7zip-android/src/main/cpp/jbinding-cpp/JavaStatInfos/: JavaPackageSevenZip.h
p7zip-android/src/main/cpp/jbinding-cpp/JavaToCPP/: JavaToCPPInArchiveImpl.cpp  JavaToCPPOutArchiveImpl.cpp  JavaToCPPSevenZip.cpp
p7zip-android/src/main/cpp/jbinding-cpp/PlatformUnix/: StdAfx.h
p7zip-android/src/main/cpp/p7zip_16.02/: CMakeLists.txt
p7zip-android/src/main/cpp/p7zip_16.02/CPP/7zip/Archive/: Bz2Handler.cpp
p7zip-android/src/main/cpp/p7zip_16.02/CPP/7zip/Archive/7z/: 7zIn.cpp  7zUpdate.cpp
p7zip-android/src/main/cpp/p7zip_16.02/CPP/7zip/Archive/Rar/: Rar5Handler.h  RarHandler.cpp
p7zip-android/src/main/cpp/p7zip_16.02/CPP/7zip/Archive/Zip/: ZipHandlerOut.cpp  ZipIn.cpp  ZipItem.cpp  ZipUpdate.cpp
p7zip-android/src/main/cpp/p7zip_16.02/CPP/7zip/Compress/: HuffmanDecoder.h  Rar3Decoder.cpp  Rar5Decoder.h  ShrinkDecoder.cpp  ZstdDecoder.cpp
p7zip-android/src/main/cpp/p7zip_16.02/CPP/7zip/UI/Common/: ArchiveOpenCallback.cpp
p7zip-android/src/main/cpp/p7zip_16.02/CPP/Common/: MyCom.h  MyString.cpp  MyString.h
p7zip-android/src/main/cpp/p7zip_16.02/CPP/Windows/: ErrorMsg.cpp
p7zip-android/src/main/cpp/test/JavaTests/src/net/sf/sevenzipjbinding/junit/badarchive/: GarbageArchiveFileTest.java
p7zip-android/src/main/cpp/test/JavaTests/src/net/sf/sevenzipjbinding/junit/compression/: CompressFeatureSetThreadCount.java  UpdateMultipleFilesNonGenericAbstractTest.java
p7zip-android/src/main/cpp/test/JavaTests/src/net/sf/sevenzipjbinding/junit/singlefile/: ExtractSingleFileGzipTest.java
p7zip-android/src/main/cpp/test/JavaTests/src/net/sf/sevenzipjbinding/junit/tools/: AssertOutputStream.java  RandomContext.java  VolumedArchiveInStreamTest.java  ZipInStream.java
p7zip-android/src/main/java/net/sf/sevenzipjbinding/: ArchiveFormat.java  IArchiveOpenCallback.java  ICryptoGetTextPassword2.java  IInArchive.java  IOutCreateArchive.java  IOutCreateArchiveXz.java  IOutCreateArchiveZip.java  IOutCreateArchiveZstd.java  IOutCreateCallback.java  IOutFeatureSetEncryptionMethod.java  IOutItemAllFormats.java  IOutItemTar.java  IOutItemXz.java  IOutItemZstd.java  IOutUpdateArchiveXz.java  IOutUpdateArchiveZstd.java  ISequentialInStream.java  ISequentialOutStream.java  PropID.java  RandomAccessChannel.java  SevenZip.java
p7zip-android/src/main/java/net/sf/sevenzipjbinding/impl/: InArchiveImpl.java  InputStreamSequentialInStream.java  OutArchive7zImpl.java  OutArchiveImpl.java  OutArchiveXzImpl.java  OutArchiveZipImpl.java  OutArchiveZstdImpl.java  OutItem.java  OutItemFactory.java  ProxyFileChannel.java  RandomAccessChannelInStream.java  RandomAccessChannelOutStream.java  RandomAccessFileInStream.java  RandomAccessFileOutStream.java  VolumedArchiveInStream.java
p7zip-android/src/main/java/net/sf/sevenzipjbinding/simple/: ISimpleInArchive.java  ISimpleInArchiveItem.java
p7zip-android/src/main/java/net/sf/sevenzipjbinding/simple/impl/: SimpleInArchiveImpl.java  SimpleInArchiveItemImpl.java
p7zip-android/src/main/java/net/sf/sevenzipjbinding/util/: ByteArrayStream.java
p7zip-android/src/main/res/values/: strings.xml
